0.11:

#2 Support for contributing filters

0.10:

#1 New API for contributing Servlets